Add bootstrap 4 resources

--- a/documentation/html_template/department.html
+++ b/documentation/html_template/department.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
     <link rel="stylesheet" href="css/style.css">
     <title>Edit Department</title>
 </head>
@@ -48,5 +52,8 @@
     <p>&copy; 2019</p>
 </footer>
 
+<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
