add main-header bootstrap style

--- a/documentation/html_template/employees.html
+++ b/documentation/html_template/employees.html
@@ -25,12 +25,19 @@
             </ul>
         </div>
     </nav>
-    <h1>Employees</h1>
-    <ul>
-        <li>
-            <a href="employee.html">Add</a>
-        </li>
-    </ul>
+    <nav id="main-header"
+         class="py-1 mb-3 navbar navbar-expand-sm navbar-light bg-light text-dark">
+        <span class="navbar-brand text-uppercase mr-auto">Employees</span>
+        <ul class="navbar-nav float-right">
+            <li class="nav-item">
+                <a href="employee.html"
+                   class="btn btn-light"
+                   title="Add employee">
+                    <i class="fa fa-plus"></i> <span
+                        class="d-none d-sm-inline">Add</span></a>
+            </li>
+        </ul>
+    </nav>
 </header>
 
 <section>
