--- a/documentation/html_template/department.html
+++ b/documentation/html_template/department.html
@@ -25,7 +25,22 @@
             </ul>
         </div>
     </nav>
-    <h1>Edit Department</h1>
+    <nav id="main-header"
+         class="py-1 mb-3 navbar navbar-expand-sm navbar-light bg-light text-dark">
+
+        <ul class="navbar-nav float-lg-left">
+            <li class="nav-item"
+                title="Back to list"><a href="departments.html" class="btn btn-light btn-block"><i
+                    class="fa fa-arrow-left"></i></a></li>
+        </ul>
+        <span class="navbar-brand text-uppercase mr-auto">Edit department</span>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="departments.html"
+                                    class="btn btn-light"
+                                    title="Save department">
+                <i class="fa fa-save"></i> <span class="d-none d-sm-inline">Save</span></a></li>
+        </ul>
+    </nav>
 </header>
 
 <header>
