--- a/documentation/html_template/departments.html
+++ b/documentation/html_template/departments.html
@@ -26,12 +26,18 @@
             </ul>
         </div>
     </nav>
-    <h1>Departments</h1>
-    <ul>
-        <li>
-            <a href="department.html">Add</a>
-        </li>
-    </ul>
+    <nav id="main-header"
+         class="py-1 mb-3 navbar navbar-expand-sm navbar-light bg-light text-dark">
+        <span class="navbar-brand text-uppercase mr-auto">Departments</span>
+        <ul class="navbar-nav float-right">
+            <li class="nav-item">
+                <a href="department.html"
+                   class="btn btn-light"
+                   title="Add department">
+                    <i class="fa fa-plus"></i> <span class="d-none d-sm-inline">Add</span></a>
+            </li>
+        </ul>
+    </nav>
 </header>
 
 <section>
