--- a/documentation/html_template/employees.html
+++ b/documentation/html_template/employees.html
@@ -32,7 +32,9 @@
             <li class="nav-item">
                 <a href="employee.html"
                    class="btn btn-light"
-                   title="Add employee">
+                   title="Add employee"
+                   data-toggle="tooltip"
+                   data-placement="bottom">
                     <i class="fa fa-plus"></i> <span
                         class="d-none d-sm-inline">Add</span></a>
             </li>
@@ -80,5 +82,10 @@
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
