--- a/documentation/html_template/departments.html
+++ b/documentation/html_template/departments.html
@@ -33,8 +33,11 @@
             <li class="nav-item">
                 <a href="department.html"
                    class="btn btn-light"
-                   title="Add department">
-                    <i class="fa fa-plus"></i> <span class="d-none d-sm-inline">Add</span></a>
+                   title="Add department"
+                   data-toggle="tooltip"
+                   data-placement="bottom">
+                    <i class="fa fa-plus"></i> <span
+                        class="d-none d-sm-inline">Add</span></a>
             </li>
         </ul>
     </nav>
@@ -113,5 +116,10 @@
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
