--- a/documentation/html_template/employee.html
+++ b/documentation/html_template/employee.html
@@ -39,7 +39,9 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a href="employees.html"
                                     class="btn btn-light"
-                                    title="Save department">
+                                    title="Save employee"
+                                    data-toggle="tooltip"
+                                    data-placement="bottom">
                 <i class="fa fa-save"></i> <span class="d-none d-sm-inline">Save</span></a></li>
         </ul>
     </nav>
@@ -73,5 +75,10 @@
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
