--- a/documentation/html_template/departments.html
+++ b/documentation/html_template/departments.html
@@ -43,72 +43,81 @@
     </nav>
 </header>
 
-<section>
+<section id="departments">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card">
 
-    <table>
-        <thead>
-        <tr>
-            <th>Title</th>
-            <th>Avg salary</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>CEO</td>
-            <td>10000</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;&nbsp;Accounting</td>
-            <td>2500</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;&nbsp;Development</td>
-            <td>1150</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;Java</td>
-            <td>1500</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;Testing</td>
-            <td>1100</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;&nbsp;People management</td>
-            <td>800</td>
-            <td>
-                <a href="department.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Avg salary</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>CEO</td>
+                            <td>10000</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;&nbsp;Accounting</td>
+                            <td>2500</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;&nbsp;Development</td>
+                            <td>1150</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;&nbsp;&nbsp;&nbsp;Java</td>
+                            <td>1500</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;&nbsp;&nbsp;&nbsp;Testing</td>
+                            <td>1100</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;&nbsp;People management</td>
+                            <td>800</td>
+                            <td>
+                                <a href="department.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
 
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <footer>
-    <p>&copy; 2019</p>
+    <hr/>
+    <p class="text-center">&copy; 2019</p>
 </footer>
 
 <!-- Optional JavaScript -->
