--- a/documentation/html_template/department.html
+++ b/documentation/html_template/department.html
@@ -45,33 +45,35 @@
     </nav>
 </header>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="departments.html">Back</a></li>
-            <li><a href="departments.html">Save</a></li>
-        </ul>
-    </nav>
-</header>
-
-
-<section>
-    <form>
-        <div>
-            <label for="field_departmentName">Department Name</label>
-            <input id="field_departmentName"
-                   type="text" value="CEO"/>
+<section id="department">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <form>
+                            <div>
+                                <label for="field_departmentName">Department Name</label>
+                                <input id="field_departmentName"
+                                       type="text" value="CEO"/>
+                            </div>
+                            <div>
+                                <label for="field_description">Description</label>
+                                <input id="field_description"
+                                       type="text" value="CEO department"/>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="field_description">Description</label>
-            <input id="field_description"
-                   type="text" value="CEO department"/>
-        </div>
-    </form>
+    </div>
 </section>
 
+
 <footer>
-    <p>&copy; 2019</p>
+    <hr/>
+    <p class="text-center">&copy; 2019</p>
 </footer>
 
 <script src="js/jquery-3.3.1.slim.min.js"></script>
