--- a/documentation/html_template/employee.html
+++ b/documentation/html_template/employee.html
@@ -47,29 +47,40 @@
     </nav>
 </header>
 
-<section>
-    <form>
-        <div>
-            <label for="field_department">Department</label>
-            <select id="field_department">
-                <option value="0">CEO</option>
-                <option value="1">Accounting</option>
-                <option value="2">Java</option>
-                <option value="3">Testing</option>
-                <option value="4">People management</option>
-            </select>
+<section id="employee">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <form>
+                            <div>
+                                <label for="field_department">Department</label>
+                                <select id="field_department">
+                                    <option value="0">CEO</option>
+                                    <option value="1">Accounting</option>
+                                    <option value="2">Java</option>
+                                    <option value="3">Testing</option>
+                                    <option value="4">People management</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label for="field_employeeName">Employee Name</label>
+                                <input id="field_employeeName"
+                                       type="text"
+                                       value="Ivan Ivanov"/>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="field_employeeName">Employee Name</label>
-            <input id="field_employeeName"
-                   type="text"
-                   value="Ivan Ivanov"/>
-        </div>
-    </form>
+    </div>
 </section>
 
 <footer>
-    <p>&copy; 2019</p>
+    <hr/>
+    <p class="text-center">&copy; 2019</p>
 </footer>
 
 <script src="js/jquery-3.3.1.slim.min.js"></script>
