--- a/documentation/html_template/employees.html
+++ b/documentation/html_template/employees.html
@@ -42,41 +42,50 @@
     </nav>
 </header>
 
-<section>
-    <table>
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Salary</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Ivan Ivanov</td>
-            <td>ivan.ivanov@test.com</td>
-            <td>1000</td>
-            <td>
-                <a href="employee.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        <tr>
-            <td>Alexander Petrov</td>
-            <td>alex.petrov@test.com</td>
-            <td>1100</td>
-            <td>
-                <a href="employee.html">Edit</a>
-                <a href="#">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<section id="employees">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Salary</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Ivan Ivanov</td>
+                            <td>ivan.ivanov@test.com</td>
+                            <td>1000</td>
+                            <td>
+                                <a href="employee.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Alexander Petrov</td>
+                            <td>alex.petrov@test.com</td>
+                            <td>1100</td>
+                            <td>
+                                <a href="employee.html">Edit</a>
+                                <a href="#">Delete</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <footer>
-    <p>&copy; 2019</p>
+    <hr/>
+    <p class="text-center">&copy; 2019</p>
 </footer>
 
 <script src="js/jquery-3.3.1.slim.min.js"></script>
