use table-striped

--- a/documentation/html_template/departments.html
+++ b/documentation/html_template/departments.html
@@ -49,8 +49,8 @@
             <div class="col">
                 <div class="card">
 
-                    <table>
-                        <thead>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
                         <tr>
                             <th>Title</th>
                             <th>Avg salary</th>
