--- a/documentation/html_template/employees.html
+++ b/documentation/html_template/employees.html
@@ -47,8 +47,8 @@
         <div class="row">
             <div class="col">
                 <div class="card">
-                    <table>
-                        <thead>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
                         <tr>
                             <th>Name</th>
                             <th>Email</th>
