use images foe delete and edit links

--- a/documentation/html_template/employees.html
+++ b/documentation/html_template/employees.html
@@ -61,18 +61,38 @@
                             <td>Ivan Ivanov</td>
                             <td>ivan.ivanov@test.com</td>
                             <td>1000</td>
-                            <td>
-                                <a href="employee.html">Edit</a>
-                                <a href="#">Delete</a>
+                            <td class="text-right">
+                                <a href="employee.html"
+                                   class="btn-sm btn-outline-secondary"
+                                   title="Edit employee"
+                                   data-toggle="tooltip"
+                                   data-placement="top">
+                                    <i class="fa fa-pencil"></i> <span
+                                        class="d-none d-md-inline">Edit</span></a>
+                                <a href="#" class="btn-sm btn-outline-secondary"
+                                   title="Delete employee"
+                                   data-toggle="tooltip"
+                                   data-placement="top">
+                                    <i class="fa fa-remove"></i> <span class="d-none d-md-inline">Delete</span></a>
                             </td>
                         </tr>
                         <tr>
                             <td>Alexander Petrov</td>
                             <td>alex.petrov@test.com</td>
                             <td>1100</td>
-                            <td>
-                                <a href="employee.html">Edit</a>
-                                <a href="#">Delete</a>
+                            <td class="text-right">
+                                <a href="employee.html"
+                                   class="btn-sm btn-outline-secondary"
+                                   title="Edit employee"
+                                   data-toggle="tooltip"
+                                   data-placement="top">
+                                    <i class="fa fa-pencil"></i> <span
+                                        class="d-none d-md-inline">Edit</span></a>
+                                <a href="#" class="btn-sm btn-outline-secondary"
+                                   title="Delete employee"
+                                   data-toggle="tooltip"
+                                   data-placement="top">
+                                    <i class="fa fa-remove"></i> <span class="d-none d-md-inline">Delete</span></a>
                             </td>
                         </tr>
                         </tbody>
