fix form layouts

--- a/documentation/html_template/department.html
+++ b/documentation/html_template/department.html
@@ -52,15 +52,19 @@
                 <div class="card">
                     <div class="card-body">
                         <form>
-                            <div>
-                                <label for="field_departmentName">Department Name</label>
-                                <input id="field_departmentName"
+                            <div class="form-group">
+                                <label class="form-control-label"
+                                       for="field_departmentName">Department Name</label>
+                                <input class="form-control "
+                                       id="field_departmentName"
                                        type="text" value="CEO"/>
                             </div>
-                            <div>
-                                <label for="field_description">Description</label>
-                                <input id="field_description"
-                                       type="text" value="CEO department"/>
+                            <div class="form-group">
+                                <label class="form-control-label"
+                                       for="field_description">Description</label>
+                                <input class="form-control"
+                                       id="field_description"
+                                       type="text" value="CEO department">
                             </div>
                         </form>
                     </div>
