--- a/documentation/html_template/employee.html
+++ b/documentation/html_template/employee.html
@@ -54,9 +54,11 @@
                 <div class="card">
                     <div class="card-body">
                         <form>
-                            <div>
-                                <label for="field_department">Department</label>
-                                <select id="field_department">
+                            <div class="form-group">
+                                <label class="form-control-label"
+                                       for="field_department">Department</label>
+                                <select class="form-control"
+                                        id="field_department">
                                     <option value="0">CEO</option>
                                     <option value="1">Accounting</option>
                                     <option value="2">Java</option>
@@ -64,9 +66,11 @@
                                     <option value="4">People management</option>
                                 </select>
                             </div>
-                            <div>
-                                <label for="field_employeeName">Employee Name</label>
-                                <input id="field_employeeName"
+                            <div class="form-group">
+                                <label class="form-control-label"
+                                       for="field_employeeName">Employee Name</label>
+                                <input class="form-control"
+                                       id="field_employeeName"
                                        type="text"
                                        value="Ivan Ivanov"/>
                             </div>
